# tuxbellum

./: .gitignore  LICENSE  Makefile  PKGBUILD  README.md  dependency_updates.txt  install.sh  io.github.ch3w3y.tuxbellum.yml  meson.build  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.sisyphus/notepads/appimage-self-contained/: decisions.md
data/: meson.build  tuxbellum.desktop  tuxbellum.metainfo.xml
docs/: COMMAND_AUDIT.md  DEPENDENCIES.md  DEPENDENCY_INVENTORY.md  INSTALL_FLOW.md  OWNED_PATHS_AUDIT.md  RELEASE_CHECKLIST.md  TUXBELLUM_V4_BACKLOG.md  TUXBELLUM_V4_PLAN.md
locales/: bellum-launcher.pot  meson.build
locales/af/: bellum-launcher.mo  bellum-launcher.po
locales/ar/: bellum-launcher.mo  bellum-launcher.po
locales/de/: bellum-launcher.mo  bellum-launcher.po
locales/el/: bellum-launcher.mo  bellum-launcher.po
locales/es/: bellum-launcher.mo  bellum-launcher.po
locales/fa/: bellum-launcher.mo  bellum-launcher.po
locales/fr/: bellum-launcher.mo  bellum-launcher.po
locales/hu/: bellum-launcher.mo  bellum-launcher.po
locales/it/: bellum-launcher.mo  bellum-launcher.po
locales/ja/: bellum-launcher.mo  bellum-launcher.po
locales/ka/: bellum-launcher.mo  bellum-launcher.po
locales/nb/: bellum-launcher.mo  bellum-launcher.po
locales/nl/: bellum-launcher.mo  bellum-launcher.po
locales/pl/: bellum-launcher.mo  bellum-launcher.po
locales/pt_BR/: bellum-launcher.mo  bellum-launcher.po
locales/ro/: bellum-launcher.mo  bellum-launcher.po
locales/ru/: bellum-launcher.mo  bellum-launcher.po
locales/sr/: bellum-launcher.mo  bellum-launcher.po
locales/sv/: bellum-launcher.mo  bellum-launcher.po
locales/tr/: bellum-launcher.mo  bellum-launcher.po
locales/uk/: bellum-launcher.mo  bellum-launcher.po
locales/zh_CN/: bellum-launcher.mo  bellum-launcher.po
locales/zh_TW/: bellum-launcher.mo  bellum-launcher.po
scripts/: build-appimage.sh  check_aur_deps.py  check_dependencies.py  check_versions.py
src/tuxbellum/: __main__.py  meson.build
src/tuxbellum/app/: __init__.py  application.py  install_dialog.py  main_window.py  meson.build  progress_dialog.py  settings_dialog.py  splash.py
src/tuxbellum/cli/: __init__.py  main.py
src/tuxbellum/config/: __init__.py  manager.py  paths.py  versions.py
src/tuxbellum/core/: __init__.py  commands.py  gpu.py  gui_picker.py  logging.py  meson.build  system.py
src/tuxbellum/domain/: __init__.py  dependency_spec.py  install_manifest.py  install_options.py  install_state.py
src/tuxbellum/engine/: __init__.py  context.py  doctor.py  executor.py  planner.py  repair.py
src/tuxbellum/engine/steps/: __init__.py  apply_dxvk.py  apply_fsr.py  apply_tuning.py  ensure_proton.py  generate_desktop.py  generate_launcher.py  init_prefix.py  install_dlls.py  run_launcher.py  validate_host.py  verify_launcher.py  write_manifest.py
src/tuxbellum/i18n/: __init__.py  locale.py  meson.build
src/tuxbellum/installer/: __init__.py  desktop.py  dll_overrides.py  dxvk.py  fsr.py  launch_vars.py  launcher.py  meson.build  precheck.py  proton.py  run.py  uninstall.py  wineprefix.py  wrappers.py
tests/: __init__.py  conftest.py  test_commands.py  test_domain.py  test_engine.py  test_paths.py  test_rootless.py  test_versions.py
