[build-system]
requires = ["meson-python>=0.15", "setuptools>=61.0"]
build-backend = "mesonpy"

[project]
name = "tuxbellum"
version = "3.0.6"
description = "TuxBellum — GTK4 GUI for installing and managing Bellum on Linux with Wine/Proton"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = ["PyGObject>=3.50"]
keywords = ["bellum", "linux", "gaming", "wine", "proton", "gamescope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.scripts]
tuxbellum = "tuxbellum.app.application:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--tb=short", "--cov=tuxbellum", "--cov-report=term-missing", "--cov-report=xml"]
markers = [
    "gtk4: Requires GTK4/PyGObject runtime (skipped by default)",
    "network: Requires network access",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["tuxbellum"]
branch = true

[tool.coverage.report]
fail_under = 70

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313", "py314"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "E402",  # Module level import not at top of file (GTK gi.require_version pattern)
]
